projects/vb6parse/snapshots/parsers/cst/library/interaction/app_activate/multiple_appactivate_statements.snap
---
source: projects/vb6parse/tests/library/interaction/app_activate.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: Newline
      text: "\n"
    - kind: SubStatement
      children:
        - kind: SubKeyword
          text: Sub
        - kind: Whitespace
          text: " "
        - kind: Identifier
          text: Test
        - kind: ParameterList
          children:
            - kind: LeftParenthesis
              text: (
            - kind: RightParenthesis
              text: )
        - kind: Newline
          text: "\n"
        - kind: StatementList
          children:
            - kind: AppActivateStatement
              children:
                - kind: Whitespace
                  text: "    "
                - kind: AppActivateKeyword
                  text: AppActivate
                - kind: Whitespace
                  text: " "
                - kind: ArgumentList
                  children:
                    - kind: Argument
                      children:
                        - kind: StringLiteralExpression
                          children:
                            - kind: StringLiteral
                              text: "\"App1\""
            - kind: Newline
              text: "\n"
            - kind: AppActivateStatement
              children:
                - kind: Whitespace
                  text: "    "
                - kind: AppActivateKeyword
                  text: AppActivate
                - kind: Whitespace
                  text: " "
                - kind: ArgumentList
                  children:
                    - kind: Argument
                      children:
                        - kind: StringLiteralExpression
                          children:
                            - kind: StringLiteral
                              text: "\"App2\""
            - kind: Newline
              text: "\n"
            - kind: AppActivateStatement
              children:
                - kind: Whitespace
                  text: "    "
                - kind: AppActivateKeyword
                  text: AppActivate
                - kind: Whitespace
                  text: " "
                - kind: ArgumentList
                  children:
                    - kind: Argument
                      children:
                        - kind: IdentifierExpression
                          children:
                            - kind: Identifier
                              text: windowTitle
            - kind: Newline
              text: "\n"
        - kind: EndKeyword
          text: End
        - kind: Whitespace
          text: " "
        - kind: SubKeyword
          text: Sub
        - kind: Newline
          text: "\n"
